--- a/wiki/pages/attributions.html
+++ b/wiki/pages/attributions.html
@@ -34,7 +34,7 @@
         <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-3.svg" />
         <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-4.svg" />
         <img src="https://static.igem.wiki/teams/4641/wiki/waves/wave-5.svg" id="shape" />
-        <h1>{% block heading %}{% endblock %}</h1>
+        <h1>{% block heading %}Attributions{% endblock %}</h1>
       </header>
 
       <!-- Content-->
