--- a/wiki/pages/hardware.html
+++ b/wiki/pages/hardware.html
@@ -126,7 +126,7 @@
                 <div class="m-5 mb-16">
                     <p class="mt-5 MAIN-STUFF" id="section1"><b> WHY DETECT TRICLOCARBAN IN SLUDGE?</b></p>
       <p class="mt-5 sub-stuff">Triclocarban is a <b>common antimicrobial agent</b> found in consumer and personal care products. It serves as a disinfectant, an antiseptic drug but most of all, an environmental contaminant. Triclocarban is also and endocrine-disrupting chemical.[1] <b>Endocrine-disrupting chemicals</b> (EDCs) are exogenous chemcials or chemical compositions that have the potential to significantly alter a variety of imporatnt biochemical pathways and affect the endocrine system.[2]
-      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/properties-of-tcc-2.jpeg" class="img-fluid mt-5" style="scale:0.6;">
+      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/properties-of-tcc-2.jpeg" class="img-fluid" style="scale:0.6;">
       <p class="sub-stuff" style="text-align:center;"><b>Figure 1:</b> Properties of TCC</p>
       <br><br> <p class="mt-5 sub-stuff">The average concentration of triclocarban found in the sludge of wastewater treatment plants is about <b>21,000 ng/g or 21 ppm</b> on a dry weight basis (dm) in primary sludge and <b>13,000 ng/g or 13 ppm</b> dm in secondary sludge.[4] Therefore, detecting triclocarban and measuring its concentration requires powerful analytical techniques.
       <br><br></p>
@@ -140,13 +140,13 @@
       <p class="mt-5 sub-stuff">Electrochemical sensors are used to detect <b>various compounds in wastewater at parts per million levels</b>. It consists of an electrode and a material coated transducer. A material which can have redox reactions with the analyte is chosen to coat the electrode. As the reaction takes place, the transducer connected to the electrode converts the chemical signal to an electrical signal which can then be detected.[6]
       <br><br> Triclocarban possesses free ions such as chlorine ion (Cl<sup>-</sup>) which can produce a signal by interacting with the positive electrode. Unfortunately we found no literature on triclocarban’s redox reactions. Hence, even if we go by the assumption that these chlorine ions will interact with the electrode, this sensor would still have <b>low selectivity</b> as there are many compounds possessing chlorine ions. Moreover, employing this in a bioreactor setup would not be feasible because then our sensor must undergo selective coating, the sample would have to undergo pretreatment and proper calibration has to be done.
       </p>
-      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/electrochemical-sensor-png.jpeg" class="img-fluid mt-5" style="scale:0.65;">
+      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/electrochemical-sensor-png.jpeg" class="img-fluid" style="scale:0.65;">
       <p class="sub-stuff" style="text-align:center;"><b>Figure 2:</b> Graphical illustration of Electrochemical sensor [7]</p>
       <p class="mt-5 sub-stuff" id="section5"><u>ENZYME-BASED SENSOR:</u></p>
       <p class="mt-5 sub-stuff">Enzyme-based biosensors are sensors whose recognition element is an enzyme which is immobilized on the surface of the sensor. The enzyme is chosen based on its binding affinity to the analyte. When the analyte binds to the enzyme, the enzyme undergoes some physiochemical changes which are converted to a measurable signal by the transducer present in the sensor which is then detected.[8]
       <br><br>An amidase from <i>Ochrobactrum sp. TCC-2</i> is capable of degrading triclocarban and possesses a high binding affinity towards this compound. However, after consulting experts, we found that due to the trace levels of triclocarban in effluent, <b>significant modifications would have to be made to the biosensor in order to make it sensitive to triclocarban</b>. Given our time constraint, this detection method was not feasible.
       <br><br></p>
-      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/enzyme-based-sensor.jpeg" class="img-fluid mt-5" style="scale:0.55;">
+      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/enzyme-based-sensor.jpeg" class="img-fluid" style="scale:0.55;">
       <p class="sub-stuff" style="text-align:center;"><b>Figure 3:</b> Graphical illustration of Enzyme-based sensors [9]</p>
       <p class="mt-5 sub-stuff" id="section6"><u>APTASENSORS:</u></p>
       <p class="mt-5 sub-stuff">Since most of our ideas were discarded due to off-target effects, we were looking for something that will specifically bind to triclocarban. This is when we came across aptamers, also known as artificial antibodies. They are single-stranded deoxyribonucleic acids (ssDNA) or ribonucleic acids (RNA), specific to a certain compound and obtained by SELEX (Systematic Evolution of Ligands by Exponential Enrichment) method. These aptamers are used as detector molecules on a biosensor.[10]
@@ -169,9 +169,9 @@
       <br><br>Molecularly Imprinted Solid-Phase Extraction (MISPE)  was shown to significantly improve the extraction of TCC, achieving an impressive extraction rate of 89.9%. The usage of LC-MS or GC–MS without MISPE, detected around 60 times lower percentage of Triclocarban compared to those obtained using MISPE-HPLC-UV.[17]
       <br><br>This approach would require <b>extensive experimental data</b> which analyzes various interactions in the sludge of the wastewater treatment plant and experimentation needs to be done to build a polymer. Therefore, due to <b>time constraints</b>, we decided to look for other feasible options.
       <br><br></p>
-      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/mip-1.jpeg" class="img-fluid mt-5" style="scale:0.6;">
+      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/mip-1.jpeg" class="img-fluid" style="scale:0.6;">
       <p class="sub-stuff" style="text-align:center;"><b>Figure 6:</b> Designing a molecularly imprinted polymer [18]</p>
-      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/mip-2-crop.jpeg" class="img-fluid mt-5" style="scale:0.5;">
+      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/mip-2-crop.jpeg" class="img-fluid" style="scale:0.5;">
       <p class="sub-stuff" style="text-align:center;"><b>Figure 7:</b> Graphical illustration of Molecularly Imprinted Polymer [19]</p>
 
       <p class="mt-5 sub-stuff" id="section9"><u>NANOMATERIAL BASED SENSORS:</u></p>
@@ -186,14 +186,14 @@
       <br><br>After analyzing and learning from numerous approaches, as listed above, we decided to simplify our approach, and landed on <b>a detection system which can be integrated with our bioreactor</b>. This consists of a laser, photodiode and infrared filter placed inside a sample collector. The initial and final samples of feed would be taken out manually from the inlet and outlet pipe of the bioreactor via valves. The sample would then be placed into the sample collector, where <b>monochromatic light from the laser</b> would interact with the compound. If the presence of photons within a specific wavelength range are identified, the <b>photodiode</b> coupled with an <b>infra-red (IR) filter</b> would capture these photons and confirm the presence of triclocarban in the given sample. Typically multiple wavelength ranges are isolated for a particular compound using Raman Spectroscopy, and these wavelength ranges can be integrated to design a photodiode particular to the compound. By attaching a <b>microcontroller</b> to the photodiode, data can be wirelessly transmitted to a software, where reduction of background noise and quantification of triclocarban would be done.
       <br><br>Raman Spectroscopy was used in order to identify specific bond vibrations (peaks) in the structure of triclocarban. Raman spectroscopy, unlike other elemental analysis, is a non destructive method and does not change the samples composition or structure and offers higher resolution compared to other spectral methods.[23][24]
       <br><br>Using an <b>excitation laser of wavelength 785 nm</b>,  Surface Enhanced Raman Spectral analysis of triclocarban was analyzed. The Raman Spectra for <b>1</b> part per million and <b>100</b> parts per million triclocarban gives a unique peak at <b>758.34644</b> cm<sup>-1</sup>. In the 10 parts per million sample, a Raman shift is seen towards the left, and the peak is detected at 754.38551cm<sup>-1</sup>. Using this data, we can come to a conclusion that the Raman Shift should be around <b>750-760</b> cm<sup>-1</sup> (wavenumber).</p>
-      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/tcc-raman-sers-3.png" class="img-fluid mt-5" style="scale:0.6;">
+      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/tcc-raman-sers-3.png" class="img-fluid" style="scale:0.6;">
       <p class="sub-stuff" style="text-align:center;"><b>Figure 8:</b> Surface Enhanced Raman Spectroscopy of triclocarban dissolved in 5% acetone. (1, 10, 100 ppm)[9]
       <br>The wavelength that detects this Raman shift was calculated using the formula:</p>
       <!--need to add the equations-->
-      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/hardware-equations.jpeg" class="img-fluid mt-5" style="scale:0.4;">
+      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/hardware-equations.jpeg" class="img-fluid" style="scale:0.4;">
       <p class="mt-5 sub-stuff">The wavelength was identified as  = 834.9185474 nm. In order to acquire the specific wavelength, we plan on using an <b>IR filter</b> of wavelength range <b>820 to 840 nm</b>. Additionally,  A <b>silicon PIN photodiode</b> within the <b>range 830 to 950 nm</b> was selected. A microcontroller attached to this photodiode would wirelessly transmit the data to a software which would be programmed to quantify triclocarban using the standard calibration curve.
 </p>
-      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/ln-conc-vs-intensity-graph.jpeg" class="img-fluid mt-5" style="scale:0.7;">
+      <img src="https://static.igem.wiki/teams/4641/wiki/hardware/ln-conc-vs-intensity-graph.jpeg" class="img-fluid" style="scale:0.7;">
       <p class="sub-stuff" style="text-align:center;"><b>Figure 9:</b> Graphical illustration of Enzyme-based sensors [9]</p>
       <br><br>
       <p class="mt-5 sub-stuff" id="section12"><u>Lab-scale detection: (Wet Lab- Future Implementation)</u></p>
