--- a/wiki/pages/hardware.html
+++ b/wiki/pages/hardware.html
@@ -196,6 +196,11 @@
       <img src="https://static.igem.wiki/teams/4641/wiki/hardware/ln-conc-vs-intensity-graph.jpeg" class="img-fluid" style="scale:0.7;">
       <p class="sub-stuff" style="text-align:center;"><b>Figure 9:</b> Graphical illustration of Enzyme-based sensors [9]</p>
       <br><br>
+      <div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/hardware/h-s-wiki-notebook-docx.pdf"
+                allowfullscreen></iframe>
+            </div>
+      <br><br>
       <p class="mt-5 sub-stuff" id="section12"><u>Lab-scale detection: (Wet Lab- Future Implementation)</u></p>
       <p class="mt-5 sub-stuff">To quantify the TCC degradation efficiency of TccA amidase, we need to perform expression studies. To detect the loss in TCC, we have come up with a method that includes a Thin Film Solid Phase MicroExtraction (TFSPME). This membrane can adsorb TCC and other non polar compounds. This is done by vigorously moving the membrane in the broth and then eluting the TCC with Acetonitrile (HPLC grade).
       <br><br>We plan on extracting TCC from the broth containing E.coli Bl21 before inoculation and 2 days after inoculation to check for the efficiency of the enzyme. We also plan on taking multiple readings in the middle of our 2 day span, to get the kinetics of the enzyme based on the concentration of TCC.
