--- a/wiki/pages/project-design.html
+++ b/wiki/pages/project-design.html
@@ -130,7 +130,7 @@
         choice. 
         Besides the inherent ability to break down the chloroaniline byproducts, other major criteria we considered
         included:<br>
-      <ul style=font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;>
+      <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;"">
         <li>Survivability of the bacteria in the pH range of the wastewater and sludge</li>
         <li>Survivability of the bacteria in the temperature range of the sludge of the WWTP</li>
         <li>Survivability at different TCC concentration ranges present in the sludge</li>
