--- a/wiki/pages/project-design.html
+++ b/wiki/pages/project-design.html
@@ -129,13 +129,13 @@
         All three of these organisms were equally suited for our chassis, therefore, our first decision to make was this
         choice. 
         Besides the inherent ability to break down the chloroaniline byproducts, other major criteria we considered
-        included:<br>
+        included:<br></p>
       <ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
         <li>Survivability of the bacteria in the pH range of the wastewater and sludge</li>
         <li>Survivability of the bacteria in the temperature range of the sludge of the WWTP</li>
         <li>Survivability at different TCC concentration ranges present in the sludge</li>
       </ul>
-
+<p>
       We then proceeded to study the growth of these bacteria at conditions similar to WWTPs in India. <br>
       To learn more about this, check out the <a href="https://2023.igem.wiki/mit-mahe/experiments"
         target="_blank">experiments page.</a></p>
