--- a/wiki/pages/project-design.html
+++ b/wiki/pages/project-design.html
@@ -135,7 +135,7 @@
         <li>Survivability of the bacteria in the temperature range of the sludge of the WWTP</li>
         <li>Survivability at different TCC concentration ranges present in the sludge</li>
       </ul>
-<p>
+<p class="mt-5 sub-stuff">
       We then proceeded to study the growth of these bacteria at conditions similar to WWTPs in India. <br>
       To learn more about this, check out the <a href="https://2023.igem.wiki/mit-mahe/experiments"
         target="_blank">experiments page.</a></p>
