--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -94,7 +94,7 @@
   <div class="m-2 mb-16">
 
     <p class="mt-3 sub-stuff"> <b> Our Goals </b></p>
-    <ol>
+    <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
       <li><b>Education for all </b>irrespective of their background, language, age and location.</li>
       <li><b>Adaptability</b> of our educational content in accordance with the target audience.
       </li>
@@ -103,7 +103,7 @@
     </p>
 
     <p class="mt-3 sub-stuff"> <b> Our Impact </b></p>
-    <ol>
+    <ol style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
       <li>4 presentations that are <b>accessible</b> to any iGEM team upon contacting us.</li>
       <li><b>11 schools </b>across the states of Tamil Nadu, Maharashtra and Karnataka in India.</li>
       <li>Taught working professionals across <b>9 states</b> in India—Karnataka, Tamil Nadu, Kerala, Andhra Pradesh,
@@ -150,6 +150,9 @@
     <img
       src="https://static.igem.wiki/teams/4641/wiki/education/mindmap-of-target-age-groups-high-school-middle-school-primary-school-and-collegiate-students-working-professionals-general-public.png"
       class="img-fluid rounded mx-auto d-block" style="scale:0.9;">
+    <p class="sub-stuff" style="text-align:center"> Codon Chart Activity conducted for High School students </p>
+
+    <p class="mt-5 sub-stuff">Our team members were able to visit nine schools across the states of Karnataka, Tamil Nadu and Maharashtra.</p>
 
     <p class="mt-5 MAIN-STUFF" id="section2">Communicating Science to High School Students </p>
     <p class="mt-5 sub-stuff">
@@ -173,39 +176,6 @@
       src="https://static.igem.wiki/teams/4641/wiki/education/codon-chart-activity-from-the-ppt-made-by-kini-for-reference.png"
       class="img-fluid rounded mx-auto d-block" style="scale:0.9;">
 
-    <!-- Carousel -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" style="scale:0.5;"
-            src="https://static.igem.wiki/teams/4641/wiki/education/whatsapp-image-2023-10-09-at-06-19-15.jpeg"
-            alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" style="scale:0.5;"
-            src="https://static.igem.wiki/teams/4641/wiki/education/whatsapp-image-2023-10-09-at-06-17-20.jpeg"
-            alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" style="scale:0.5;"
-            src="https://static.igem.wiki/teams/4641/wiki/education/whatsapp-image-2023-10-09-at-00-25-58.jpeg"
-            alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only visually-hidden">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only visually-hidden">Next</span>
-      </a>
-    </div>
 
     <div class="accordion" id="accordionExample">
       <div class="accordion-item">
@@ -233,6 +203,10 @@
               This initiative at Government High School, Kopinayakkanpatti, expanded our outreach and promoted awareness
               of synthetic biology and its real-world applications, particularly in regions with distinct linguistic and
               agricultural backgrounds.</p>
+
+          <img
+                src="https://static.igem.wiki/teams/4641/wiki/education/government-high-school-kopinayakkanpatti-madurai-tamil-nadu.jpg"
+                class="img-fluid rounded mx-auto d-block" style="scale:0.7;">
           </div>
         </div>
       </div>
@@ -262,6 +236,11 @@
               The students actively participated throughout the session, displaying remarkable enthusiasm, particularly
               during the interactive activity segment of the presentation. During this hands-on activity, they learned
               how to utilize a Codon Chart to decipher the amino acid sequence encoded by an mRNA sequence.</p>
+
+            <img
+                src="https://static.igem.wiki/teams/4641/wiki/education/gundecha-education-academy-mumbai-maharashtra.png"
+                class="img-fluid rounded mx-auto d-block" style="scale:0.7;">
+
           </div>
         </div>
       </div>
@@ -281,6 +260,11 @@
               <b>raising questions</b> on biosafety, career opportunities, and the global impact of synthetic biology. We
               concluded the session with a codon chart activity, which the students enjoyed. Faculty members commended
               our educational efforts and posed intriguing questions about the containment of our project.</p>
+
+              <img
+                src="https://static.igem.wiki/teams/4641/wiki/education/prakriyainternationalschool.jpeg"
+                class="img-fluid rounded mx-auto d-block" style="scale:0.7;">
+
           </div>
         </div>
       </div>
@@ -305,6 +289,11 @@
               At the end of the session, after introducing our project and its applications, many individuals approached
               us with further questions about our project and inquiries on how they could become synthetic biologists.
               The students also provided feedback and expressed their gratitude for the session.</p>
+
+              <img
+                src="https://static.igem.wiki/teams/4641/wiki/education/stanes-anglo-indian-high-secondary-school-coimbatore-tamil-nadu.jpg"
+                class="img-fluid rounded mx-auto d-block" style="scale:0.7;">
+
           </div>
         </div>
       </div>
@@ -327,13 +316,29 @@
               knowledge shared and displayed a keen interest in the subject matter. One student went the extra mile by
               diligently <b>taking notes</b> during the session and sharing them with one of our team members through social
               media. This initiative demonstrated their commitment to learning and enthusiasm for discussing topics</p>
-            <figure>
-              <img
-                src="https://static.igem.wiki/teams/4641/wiki/education/a-student-sending-one-of-the-members-a-picture-of-her-notes-after-the-session-on-synthetic-biology.jpg"
-                class="img-fluid rounded mx-auto d-block" style="scale:0.5;">
-              <figcaption style="text-align:center"> A student sending one of the members a picture of her notes after
-                the session on synthetic biology </figcaption>
-            </figure>
+            
+            <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <img
+                      src="https://static.igem.wiki/teams/4641/wiki/education/dks-hippocampus-kanakapura-village-karnataka-1.jpg"
+                      class="img-fluid mt-4" style="scale:0.9">
+                  </div>
+                  <div class="col-md-6">
+                    <img
+                      src="https://static.igem.wiki/teams/4641/wiki/education/dks-hippocampus-kanakapura-village-karnataka-2.jpg"
+                      class="img-fluid mt-4" style="scale:0.9">
+                  </div>
+                </div>
+              </div>
+
+            <img
+                src="https://static.igem.wiki/teams/4641/wiki/education/dks-hippocampus-kanakapura-village-karnataka-3.jpeg"
+                class="img-fluid rounded mx-auto d-block mt-5" style="scale:0.6;">
+            <p class="sub-stuff" style="text-align:center">A student sending one of the members a picture of her notes after the session on synthetic biology</p>
+            
+
+
           </div>
         </div>
       </div>
@@ -353,6 +358,11 @@
               The students showed keen interest in bioethics and biosafety, leading to engaging discussions. They
               enthusiastically inquired about potential career opportunities within synthetic biology and exhibited
               curiosity regarding the <b>intricacies of biosafety and bioethics</b>.</p>
+
+              <img
+                src="https://static.igem.wiki/teams/4641/wiki/education/samhita-academy-bengaluru-karnataka.jpg"
+                class="img-fluid rounded mx-auto d-block" style="scale:0.7;">
+
           </div>
         </div>
       </div>
@@ -431,7 +441,7 @@
             <figure>
               <img class="img-fluid rounded mx-auto d-block"
                 src="https://static.igem.wiki/teams/4641/wiki/education/mjc-school-udupi-karnataka.jpg"
-                style="scale:0.50;">
+                style="scale:0.60;">
               <figcaption style="text-align: center">MJC School, Udupi, Karnataka</figcaption>
             </figure>
           </div>
