--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -404,7 +404,6 @@
                   </div>
                 </div>
               </div>
-              <figcaption style="text-align: center"> Board High School, Udupi, Karnataka </figcaption>
             </figure>
           </div>
         </div>
@@ -438,12 +437,9 @@
               reflect and modify our teaching methods to cater to different populations of students in order to make
               synthetic biology more understandable.<br>
             </p>
-            <figure>
               <img class="img-fluid rounded mx-auto d-block"
                 src="https://static.igem.wiki/teams/4641/wiki/education/mjc-school-udupi-karnataka.jpg"
                 style="scale:0.60;">
-              <figcaption style="text-align: center">MJC School, Udupi, Karnataka</figcaption>
-            </figure>
           </div>
         </div>
       </div>
@@ -474,6 +470,11 @@
               underscored their eagerness to delve into the complexities of synthetic biology and genetic engineering.
               The session with the middle school students was marked by their inquisitiveness and their readiness to
               explore the boundaries of scientific possibilities.</p>
+
+          <img class="img-fluid rounded mx-auto d-block"
+                src="https://static.igem.wiki/teams/4641/wiki/education/prakriya-international-school-reaching-out-to-middle-school.jpeg"
+                >
+
           </div>
         </div>
       </div>
@@ -493,6 +494,11 @@
               language, Kannada, which will be integrated into their syllabus as additional content and be taught at
               almost <b>14,102 schools</b> across India. This gave us a chance to spread awareness about the presence of
               harmful chemicals in personal care products among the local community.<br><br </p>
+
+              <img class="img-fluid rounded mx-auto d-block"
+                src="https://static.igem.wiki/teams/4641/wiki/education/india-literacy-project.png" style="scale:0.85"
+                >
+
             <div class="ratio ratio-16x9">
               <iframe src="https://static.igem.wiki/teams/4641/wiki/education/ilp-kannada-ppt.pdf"
                 allowfullscreen></iframe>
@@ -546,7 +552,7 @@
                 <div class="col-md-6">
                   <img
                     src="https://static.igem.wiki/teams/4641/wiki/education/sri-krishna-mandir-hulimavu-bangalore-3.png"
-                    class="img-fluid mt-4" style=>
+                    class="img-fluid mt-4">
                 </div>
                 <div class="col-md-6">
                   <img
@@ -576,43 +582,22 @@
               contained four activities- colouring, crossword, maze puzzle and word search. The students actively
               engaged in these activities and also told us that they enjoyed it a lot. It was a heartwarming experience
               to spark this enthusiasm about science in them at such a young age.</p>
-            <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100"
+
+              <div class="container">
+              <div class="row">
+                <div class="col-md-6">
+                  <img
                     src="https://static.igem.wiki/teams/4641/wiki/education/dr-nitte-shankar-adyanthaya-memorial-english-medium-school-karkala-karnataka-1.png"
-                    style="scale:0.50;">
+                    class="img-fluid mt-4" style="scale:0.8">
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100"
+                <div class="col-md-6">
+                  <img
                     src="https://static.igem.wiki/teams/4641/wiki/education/dr-nitte-shankar-adyanthaya-memorial-english-medium-school-karkala-karnataka-2.jpg"
-                    style="scale:0.50;">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100"
-                    src="https://static.igem.wiki/teams/4641/wiki/education/dr-nitte-shankar-adyanthaya-memorial-english-medium-school-karkala-karnataka-3.png"
-                    style="scale:0.50;">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100"
-                    src="https://static.igem.wiki/teams/4641/wiki/education/dr-nitte-shankar-adyanthaya-memorial-english-medium-school-karkala-karnataka-4.png"
-                    style="scale:0.50;">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100"
-                    src="https://static.igem.wiki/teams/4641/wiki/education/dr-nitte-shankar-adyanthaya-memorial-english-medium-school-karkala-karnataka-5.png"
-                    style="scale:0.50;">
+                    class="img-fluid mt-4" style="scale:0.8">
                 </div>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only visually-hidden">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only visually-hidden">Next</span>
-              </a>
             </div>
+            
           </div>
         </div>
       </div>
@@ -640,7 +625,7 @@
                 allowfullscreen></iframe>
             </div>
             <br><br><br>
-            <div class="ratio ratio-16x9">
+            <div class="mt-5 ratio ratio-16x9">
               <iframe src="https://static.igem.wiki/teams/4641/wiki/education/tcc-comic-strip-2.pdf"
                 allowfullscreen></iframe>
             </div>
@@ -648,13 +633,13 @@
         </div>
       </div>
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwelve">
+        <h2 class="accordion-header" id="headingThirteen">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
+            data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
             <b>Activity booklet- “Under the Sea”</b>
           </button>
         </h2>
-        <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve">
+        <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen">
           <div class="accordion-body">
             <p>GMOs are frequently faced with mistrust, so to demystify and explain the science behind it in the most
               approachable way possible, we set out to create an activity booklet for children. It involves various
