--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -704,7 +704,7 @@
                 </div>
                 <div class="col-md-6">
                   <img
-                    src="https://static.igem.wiki/teams/4641/wiki/education/dr-nitte-shankar-adyanthaya-memorial-english-medium-school-karkala-karnataka-2.jpg"
+                    src="https://static.igem.wiki/teams/4641/wiki/education/lab-safety-3.png"
                     class="img-fluid mt-4" style="scale:0.9">
                 </div>
               </div>
@@ -1138,6 +1138,10 @@
                   simple terms. We put up a series of three comic strips on our Instagram handle to interact with our
                   audience and attract their interest in this field. It added a fun element to our education approach
                   while keeping our audience's interest alive.<br></p>
+                  <div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/education/synbiocomicstrip.pdf"
+                allowfullscreen></iframe>
+            </div>
               </div>
             </div>
           </div>
@@ -1173,31 +1177,24 @@
                   in addressing climate change, improving agriculture, and waste management with a growing global
                   market. Overcoming technical and regulatory hurdles is critical to its success.<br>
                 </p>
-                <div id="carouselExampleControls7" class="carousel slide" data-ride="carousel">
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img class="d-block w-100"
-                        src="https://static.igem.wiki/teams/4641/wiki/education/syn-bio-series-1.png" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100"
-                        src="https://static.igem.wiki/teams/4641/wiki/education/syn-bio-series-2.png"
-                        alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100"
-                        src="https://static.igem.wiki/teams/4641/wiki/education/syn-bio-series-3.png" alt="Third slide">
-                    </div>
-                  </div>
-                  <a class="carousel-control-prev" href="#carouselExampleControls7" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only visually-hidden">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#carouselExampleControls7" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only visually-hidden">Next</span>
-                  </a>
+
+                <div class="row">
+                <div class="col-md-6">
+                  <img
+                    src="https://static.igem.wiki/teams/4641/wiki/education/syn-bio-series-1.png"
+                    class="img-fluid mt-4" style="scale:0.9">
                 </div>
+                <div class="col-md-6">
+                  <img
+                    src="https://static.igem.wiki/teams/4641/wiki/education/syn-bio-series-2.png"
+                    class="img-fluid mt-4" style="scale:0.9">
+                </div>
+              </div>
+                
+               <img
+                  src="https://static.igem.wiki/teams/4641/wiki/education/syn-bio-series-3.png"
+                  class="img-fluid mt-4 rounded mx-auto d-block" style="scale:0.7">
+
               </div>
             </div>
           </div>
@@ -1220,7 +1217,7 @@
                   using the piano sample as the primary element and added his own unique, creative, and experimental
                   musical additions. Further, it paved a path for us to educate visually impaired people.
                 </p>
-                <div class="container">
+                <div class="container mb-3">
                   <div class="row">
                     <div class="col-md-6">
                       <img src="https://static.igem.wiki/teams/4641/wiki/education/music-compostion.png"
@@ -1232,6 +1229,10 @@
                     </div>
                   </div>
                 </div>
+
+                <iframe title="MIT-MAHE: Music Composition of Amidase (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/59fd1533-80ac-4416-bb5c-2a6e73795c86" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
+
+
               </div>
             </div>
           </div>
