--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -66,7 +66,8 @@
                         </a>
                       </li>
                     </ul>
-                
+                </div>
+                </div>
                   </div>
                 </div>
 {% endblock %}
